# ObjectDetection

detectron2_duckiebot_node/: Dockerfile  dependencies-py3.txt  package.xml
detectron2_duckiebot_node/src/: detectron2_duckiebot.py
