<package>
  <name>detectron2_duckiebot_node</name>
  <version>0.1.0</version>
  <description>
  This package is for Digit Detection .
  </description>
  <maintainer email="tianming@ualberta.ca">Tianming Han</maintainer>
  <maintainer email="alzebdeh@ualberta.ca">Leen Alzebdeh</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>